<resources>
    <string name="app_name">Quran And Dhikr</string>
    <string name="search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="prayers">Prayers</string>
    <string name="share">Share</string>
    <string name="communicate">Communicate</string>
    <string name="names">Blessings</string>
    <string name="settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="language_title">Language</string>
    <string name="language_settings">Language Settings</string>
    <string name="view_settings">View Settings</string>
    <string name="dark_mode_setting">Dark Mode</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_blessing">BlessingActivity</string>
    <!-- Strings used for fragments for navigation -->

    <string name="zeroButton">Zero</string>
    <string name="startDhikrPrayers">Start Dhikr for Prayers</string>
    <string name="continueDhikrPrayers">Continue Dhikr for Prayers</string>
    <string name="startDhikrNames">Start Dhikr for Asmaul Husna</string>
    <string name="continueDhikrNames">Continue Dhikr for Asmaul Husna</string>
    <string name="AddBlessingAddName">Add Name</string>
    <string name="AddBlessingAddBlessingButton">Confirm</string>
    <string name="addNameEmptyError">Name must be defined.</string>
    <string name="blessings">Blessings</string>
    <string name="addNameLengthError">Name cannot exceed 20 characters.</string>
    <string name="blessingEmptyError">This field Cannot Be Empty</string>
    <string name="blessingLengthError">This field cannot exceed 500 characters</string>
    <string name="blessingExistsError">Blessing With this Name Already Exists</string>
    <string name="fab_content_desc">Add blessings</string>
    <string name="addBlessingButtonText">Add Blessing</string>
    <string name="editBlessingMenuItem">Edit Blessing</string>
    <string name="deleteBlessingMenuItem">Delete Blessing</string>
    <string name="AddBlessingAddBlessing">Add Blessing...</string>
    <string name="changeAlphabetToPNGs">QURAN</string>
    <string name="changeAlphabetToMeanings">MEANİNG</string>
    <string name="changeAlphabetToLatin">LATIN</string>


</resources>
