<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sure"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/prayers" />
        <item
            android:id="@+id/nav_names"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/names" />
        <item
            android:id="@+id/nav_blessings"
            android:icon="@drawable/ic_baseline_edit_24"
            android:title="@string/blessings" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />


    </group>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
        </menu>
    </item>
</menu>