<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.blessings.AddBlessingActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/adNameToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbarColor"
        android:elevation="4dp"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:popupTheme="@style/Theme.AppCompat.Light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/secondaryBackgroundColor"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addBlessingAddNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:textColorHint="@color/textColorHint"
            app:errorEnabled="true" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addBlessingAddNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/AddBlessingAddName"
                android:inputType="text"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColorHint" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addBlessingAddBlessingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:textColorHint="@color/textColorHint"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addBlessingAddBlessingEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/AddBlessingAddBlessing"
                android:inputType="text"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColorHint" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/addBlessingButton"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="32dp"
            android:background="@drawable/btn_plus"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/AddBlessingAddBlessingButton"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />
    </LinearLayout>
</LinearLayout>